Update service port

--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -20,7 +20,7 @@ spec:
           runAsNonRoot: false 
           readOnlyRootFilesystem: false
           allowPrivilegeEscalation: false
-        image: jokeserviceacr.azurecr.io/frontend_ms:v3.0
+        image: <your-image-placeholder>
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
