--- a/moderate-service/deployment.yaml
+++ b/moderate-service/deployment.yaml
@@ -28,6 +28,8 @@ spec:
           allowPrivilegeEscalation: false
         ports:
         - containerPort: 8001
+          name: moderate
+          protocol: TCP
         resources:
           limits:
             cpu: 100m
@@ -46,13 +48,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: moderate-service
+  name: moderateservice
   namespace: jokes
 spec:
   selector:
     app: moderate-ms
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8001
+    - port: 8001
+      name: moderate
   type: LoadBalancer
